<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context="com.sticky.fsetbirne.MainActivity"
    >

    <TextView
        android:id="@+id/text_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/text_connection"
        android:text="@string/info_mode"
        android:textColor="@color/color_text"
        />
    <TextView
        android:id="@+id/text_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_toRightOf="@+id/text_mode"
        android:text="@string/info_connection_status"
        android:textColor="@color/color_text"
        />

    <ImageView
        android:id="@+id/icon_connection"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_toRightOf="@id/text_connection"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:background="@color/color_text"
        />


    <Spinner
        android:id="@+id/spinner_mode"
        android:background="@color/color_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_connection"
        android:layout_toRightOf="@+id/text_mode"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        >
    </Spinner>

    <TextView
        android:id="@+id/text_delay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_below="@+id/spinner_mode"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignParentLeft="true"
        android:text="@string/info_delay"
        android:textColor="@color/color_text"
        />

    <TextView
        android:id="@+id/text_hue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/spinner_mode"
        android:layout_toRightOf="@+id/text_delay"
        android:text="@string/info_hue"
        android:textColor="@color/color_text"
        />

    <NumberPicker
        android:id="@+id/picker_delay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/text_delay"

        />
    <NumberPicker
        android:id="@+id/picker_HUE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_toRightOf="@+id/picker_delay"
        android:layout_below="@+id/text_hue"
        />

    <NumberPicker
        android:id="@+id/picker_brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_toRightOf="@+id/picker_HUE"
        android:layout_below="@+id/text_brightness"
        />
    <TextView
        android:id="@+id/text_startLED"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/input_B"
        android:textSize="24sp"
        android:textColor="@color/color_text"
        android:layout_below="@+id/picker_brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_startLED"
        />

    <Spinner
        android:id="@+id/picker_startLED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_toRightOf="@+id/input_B"
        android:layout_below="@+id/text_startLED"
        />

    <TextView
        android:id="@+id/text_endLED"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/input_B"
        android:textSize="24sp"
        android:textColor="@color/color_text"
        android:layout_below="@+id/picker_startLED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_endLED"
        />

    <Spinner
        android:id="@+id/picker_endLED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_toRightOf="@+id/input_B"
        android:layout_below="@+id/text_endLED"
        />


    <TextView
        android:id="@+id/text_brightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/spinner_mode"
        android:layout_toRightOf="@+id/text_hue"
        android:text="@string/info_brightness"
        android:textColor="@color/color_text"
        />

    <TextView
        android:id="@+id/info_R"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/picker_delay"
        android:text="@string/info_R"
        android:textColor="@color/color_text"
        />

    <TextView
        android:id="@+id/info_G"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@id/info_R"
        android:layout_below="@+id/picker_delay"
        android:text="@string/info_G"
        android:textColor="@color/color_text"
        />

    <TextView
        android:id="@+id/info_B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@id/info_G"
        android:layout_below="@+id/picker_delay"
        android:text="@string/info_B"
        android:textColor="@color/color_text"
        />

    <EditText
        android:id="@+id/input_R"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_below="@id/info_R"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/color_text"
        />
    <EditText
        android:id="@+id/input_G"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_below="@id/info_R"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/input_R"
        android:background="@color/color_text"
        />
    <EditText
        android:id="@+id/input_B"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_below="@id/info_R"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/input_G"
        android:background="@color/color_text"
        />

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:textSize="24sp"
        android:text="@string/info_button_change"
        />

    <Button
        android:id="@+id/button_execute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="50dp"
        android:layout_toRightOf="@+id/button_send"
        android:layout_alignParentBottom="true"
        android:textSize="24sp"
        android:text="@string/info_button_execute"
        />


</RelativeLayout>
